# Windows-interaction-with-Wiimote

./: README.md
CorseWorkReport/: .gitignore  Content.tex  Contents.tex  Main.tex  Titlepage.tex  grey_remover.py
CorseWorkReport/sections/: annotation.tex  manual.tex  project_creation.tex  specification.tex  theoretical_information.tex
Wiimote/: .gitignore  Cargo.toml  build.rs
Wiimote/src/: lib.rs  main.rs
WiimoteHandler/: CMakeLists.txt  WiimoteHid.cpp  WiimoteHid.hpp  main.cpp
